--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">MiEventoAPP</string>
     <string name="pass">Contraseña</string>
+    <string name="guardar_en_favoritos">GUARDAR EN FAVORITOS</string>
 </resources>
